--- a/ruoyi-admin/src/main/resources/templates/system/room/add.html
+++ b/ruoyi-admin/src/main/resources/templates/system/room/add.html
@@ -7,9 +7,9 @@
 <div class="wrapper wrapper-content animated fadeInRight ibox-content">
     <form class="form-horizontal m" id="form-room-add">
         <div class="form-group">
-            <label class="col-sm-3 control-label is-required">民宿ID：</label>
+            <label class="col-sm-3 control-label is-required">民宿名称：</label>
             <div class="col-sm-8">
-                <input name="houseId" class="form-control" type="text" required>
+                <input name="houseName" class="form-control" type="text" required>
             </div>
         </div>
         <div class="form-group">
@@ -25,7 +25,7 @@
             </div>
         </div>
         <div class="form-group">
-            <label class="col-sm-3 control-label is-required">房间标准：</label>
+            <label class="col-sm-3 control-label is-required">房间标准(单/双/三人间):</label>
             <div class="col-sm-8">
                 <input name="standard" class="form-control" type="text" required>
             </div>
