--- a/ruoyi-admin/src/main/resources/templates/system/room/edit.html
+++ b/ruoyi-admin/src/main/resources/templates/system/room/edit.html
@@ -32,7 +32,7 @@
             </div>
         </div>
         <div class="form-group">
-            <label class="col-sm-3 control-label is-required">空闲：</label>
+            <label class="col-sm-3 control-label is-required">空闲（是：1，否：0）：</label>
             <div class="col-sm-8">
                 <input name="isFree" th:field="*{isFree}" class="form-control" type="text" required>
             </div>
