--- a/ruoyi-admin/src/main/resources/templates/landlordhomeorder/landlordorder/edit.html
+++ b/ruoyi-admin/src/main/resources/templates/landlordhomeorder/landlordorder/edit.html
@@ -18,7 +18,7 @@
             <div class="form-group">
                 <label class="col-sm-3 control-label is-required">民宿名称：</label>
                 <div class="col-sm-8">
-
+                    <input name="houseName" th:field="*{houseName}" class="form-control" type="text" hidden >
                 </div>
             </div>
 <!--            <div class="form-group">-->
