--- a/wx/pages/info/room_order/room_order.wxml
+++ b/wx/pages/info/room_order/room_order.wxml
@@ -1,2 +1,17 @@
-<!--pages/info/room_order/room_order.wxml-->
-<text>pages/info/room_order/room_order.wxml</text>
+<view class='tab-items'>
+    <!-- 待入仓 -->  
+    <view class='show'>
+      <view class='list' wx:for="{{houseList}}" wx:for-item="item" wx:key='id'>
+        <view class='list_top'>
+          <view class='numAndTime'>
+            <image class='numPic' src='{{item.imageUrl}}'></image>
+            <view  class='numInfo'>
+              <view class='num'>{{item.houseName}}</view>
+              <view class='time'>{{item.address}}</view>
+            </view>
+          </view>
+          <view class='state'>销量：{{item.sale}}</view>
+        </view>
+      </view>
+    </view>
+</view>
