修正了导出功能

--- a/ruoyi-admin/src/main/resources/templates/system/buySpecialty/infopage.html
+++ b/ruoyi-admin/src/main/resources/templates/system/buySpecialty/infopage.html
@@ -112,6 +112,7 @@
                 let json = eval( "(" + res + ")" );
                 if(json.result_code==0){
                     top.layer.alert("下单成功");
+                    $.modal.openTab('特产订购', '/system/buySpecialty/buySpecialty');
                 }
                 else{
                     top.layer.alert(json.result_msg);
