--- a/ruoyi-admin/src/main/resources/templates/system/buySpecialty/buySpecialty.html
+++ b/ruoyi-admin/src/main/resources/templates/system/buySpecialty/buySpecialty.html
@@ -31,8 +31,8 @@
                 <div class="select-list">
                     <ul>
                         <li>
-                            <label>民宿ID：</label>
-                            <input type="text" name="houseId"/>
+                            <label>民宿名称：</label>
+                            <input type="text" name="houseName"/>
                         </li>
                         <li>
                             <label>特产名称：</label>
