--- a/ruoyi-admin/src/main/resources/templates/system/buyroom/infopage.html
+++ b/ruoyi-admin/src/main/resources/templates/system/buyroom/infopage.html
@@ -87,6 +87,7 @@
                 let json = eval( "(" + res + ")" );
                 if(json.result_code==0){
                     top.layer.alert("预定成功");
+                    $.modal.openTab('民宿订购', '/system/buyroom/buyroom');
                 }
                 else{
                     top.layer.alert(json.result_msg);
