--- a/ruoyi-admin/src/main/resources/templates/system/room/room.html
+++ b/ruoyi-admin/src/main/resources/templates/system/room/room.html
@@ -44,11 +44,11 @@
                         </li>
                         <li>
                             <label>房间标准：</label>
-                            <input type="text" name="standard"/>
+                            <input type="text" name="standard" placeholder="单/双/三人间"/>
                         </li>
                         <li>
                             <label>空闲：</label>
-                            <input type="text" name="isFree"/>
+                            <input type="number" name="isFree" oninput="if(value!=0)value=1" placeholder="是：1，否：0"/>
                         </li>
                         <li>
                             <a class="btn btn-primary btn-rounded btn-sm noprint" onclick="$.table.search()"><i class="fa fa-search"></i>&nbsp;搜索</a>
