--- a/ruoyi-admin/src/main/resources/templates/system/buyroom/buyroom.html
+++ b/ruoyi-admin/src/main/resources/templates/system/buyroom/buyroom.html
@@ -71,13 +71,13 @@
             <!--                <a class="btn btn-danger multiple disabled" onclick="$.operate.removeAll()" shiro:hasPermission="system:buyroom:remove">-->
             <!--                    <i class="fa fa-remove"></i> 删除-->
             <!--                </a>-->
-            <a class="btn btn-warning" onclick="$.table.exportExcel()" shiro:hasPermission="system:buyroom:export">
+            <a class="btn btn-warning" onclick="$.table.exportExcel()" >
                 <i class="fa fa-download"></i> 导出
             </a>
-            <a class="btn btn-success" onclick="$.modal.openTab('民宿订购统计', '/system/buyroom/statistics');" shiro:hasPermission="system:buyroom:statistics">
+            <a class="btn btn-success" onclick="$.modal.openTab('民宿订购统计', '/system/buyroom/statistics');" >
                 <i class="fa fa-plus"></i> 统计
             </a>
-            <a class="btn btn-success" onclick="printHtml();" shiro:hasPermission="xxxx:xxxx:print">
+            <a class="btn btn-success" onclick="printHtml();" >
                 <i class="glyphicon glyphicon-print icon-share"></i> 打印
             </a>
         </div>
@@ -159,7 +159,7 @@
                         //actions.push('<a class="btn btn-success btn-xs ' + editFlag + '" href="javascript:void(0)" onclick="$.operate.edit(\'' + row.id + '\')"><i class="fa fa-edit"></i>详情页查看</a> ');
                         //actions.push('<a class="btn btn-danger btn-xs ' + removeFlag + '" href="javascript:void(0)" onclick="$.operate.remove(\'' + row.id + '\')"><i class="fa fa-remove"></i>删除</a>');
                         //actions.push('<a class="btn btn-success btn-xs ' + editFlag + '" href="javascript:void(0)" onclick="$.operate.edit(\'' + row.id + '\')"><i class="fa fa-search"></i>编辑</a> ');
-                        actions.push("<a class='btn btn-success btn-xs " + buyFlag + "' href='javascript:void(0)' onclick='buy(" + row.id + ")'><i class='fa fa-search'></i>详情页查看</a>");
+                        actions.push("<a class='btn btn-success btn-xs ' href='javascript:void(0)' onclick='buy(" + row.id + ")'><i class='fa fa-search'></i>详情页查看</a>");
                         return actions.join('');
                     }
                 }]
