--- a/ruoyi-admin/src/main/resources/templates/system/specialty/specialty.html
+++ b/ruoyi-admin/src/main/resources/templates/system/specialty/specialty.html
@@ -64,22 +64,22 @@
         </div>
 
         <div class="btn-group-sm" id="toolbar" role="group">
-            <a class="btn btn-success" onclick="$.operate.add()" shiro:hasPermission="system:specialty:add">
+            <a class="btn btn-success" onclick="$.operate.add()" >
                 <i class="fa fa-plus"></i> 新增特产
             </a>
-            <a class="btn btn-primary single disabled" onclick="$.operate.edit()" shiro:hasPermission="system:specialty:edit">
+            <a class="btn btn-primary single disabled" onclick="$.operate.edit()" >
                 <i class="fa fa-edit"></i> 修改
             </a>
-            <a class="btn btn-danger multiple disabled" onclick="$.operate.removeAll()" shiro:hasPermission="system:specialty:remove">
+            <a class="btn btn-danger multiple disabled" onclick="$.operate.removeAll()" >
                 <i class="fa fa-remove"></i> 删除
             </a>
-            <a class="btn btn-warning" onclick="$.table.exportExcel()" shiro:hasPermission="system:specialty:export">
+            <a class="btn btn-warning" onclick="$.table.exportExcel()" >
                 <i class="fa fa-download"></i> 导出
             </a>
-            <a class="btn btn-success" onclick="$.modal.openTab('特产统计', '/system/specialty/statistics');" shiro:hasPermission="system:landlord:statistics">
+            <a class="btn btn-success" onclick="$.modal.openTab('特产统计', '/system/specialty/statistics');">
                 <i class="fa fa-plus"></i> 统计
             </a>
-            <a class="btn btn-success" onclick="printHtml();" shiro:hasPermission="xxxx:xxxx:print">
+            <a class="btn btn-success" onclick="printHtml();">
                 <i class="glyphicon glyphicon-print icon-share"></i> 打印
             </a>
         </div>
@@ -161,8 +161,8 @@
                         align: 'center',
                         formatter: function(value, row, index) {
                             var actions = [];
-                            actions.push('<a class="btn btn-success btn-xs ' + editFlag + '" href="javascript:void(0)" onclick="$.operate.edit(\'' + row.id + '\')"><i class="fa fa-edit"></i>修改信息</a> ');
-                            actions.push('<a class="btn btn-danger btn-xs ' + removeFlag + '" href="javascript:void(0)" onclick="$.operate.remove(\'' + row.id + '\')"><i class="fa fa-remove"></i>删除</a>');
+                            actions.push('<a class="btn btn-success btn-xs " href="javascript:void(0)" onclick="$.operate.edit(\'' + row.id + '\')"><i class="fa fa-edit"></i>修改信息</a> ');
+                            actions.push('<a class="btn btn-danger btn-xs " href="javascript:void(0)" onclick="$.operate.remove(\'' + row.id + '\')"><i class="fa fa-remove"></i>删除</a>');
                             return actions.join('');
                         }
                     }]
