--- a/wx/pages/info/landlord/top_landlord.wxss
+++ b/wx/pages/info/landlord/top_landlord.wxss
@@ -176,3 +176,124 @@ page{
   line-height: 54rpx;
   color:#ededed;
 }
+
+.filter-tab{
+	display: flex;
+	width: 100%;
+	line-height: 80rpx;
+	border-bottom: 1rpx solid #ddd;
+	position: relative;
+	z-index: 2;
+	background: #fff;
+}
+.filter-tab text{
+	flex: 1;
+	text-align: center;
+}
+.filter-tab text:after{
+	content: '';
+	display: inline-block;
+	vertical-align: 4rpx;
+	width: 0;
+	height: 0;
+	border-left: 12rpx solid transparent;
+	border-right: 12rpx solid transparent;
+	border-top: 12rpx solid #bbb;
+	margin-left: 8rpx;
+}
+.filter-tab text.active{
+	color: #f7982a;
+}
+.filter-tab:not(.sort-tab) text.active:after{
+	border-top: 0;
+	border-bottom: 12rpx solid #f7982a;
+}
+.filter-tab.sort-tab text.active:after{
+	border-top: 12rpx solid #f7982a;
+}
+.filter-panel{
+	display: flex;
+	background: #f5f5f5;
+	position: absolute;
+	width: 100%;
+	z-index: 13;
+	overflow: hidden;
+}
+.filter-panel-left,.filter-panel-right{
+	flex: 1;
+	line-height: 80rpx;
+	text-align: center;
+	max-height: 480rpx;
+	overflow-y: auto;
+}
+.filter-panel-left .active{
+	background: #fff;
+}
+.filter-panel-right .active{
+	color: #f7982a;
+}
+.filter-panel-right{
+	background: #fff;
+}
+.filter-panel-right:empty{
+	display: none;
+}
+.filter-shadow{
+	position: absolute;
+	width: 100%;
+	top: 0;
+	bottom: 0;
+	z-index: 1;
+	background: rgba(0,0,0,.5);
+}
+.filter-sort{
+	display: block;
+	background: #fff;
+}
+.filter-sort view{
+	flex: 1;
+	line-height: 80rpx;
+	text-indent: 60rpx;
+	max-height: 432rpx;
+	overflow-y: auto;
+	border-bottom: 1rpx solid #e8e8e8;
+}
+.filter-sort view.active{
+	color: #f7982a;
+}
+.filter-multiple{
+	flex-direction: column;
+}
+.filter-multiple .group{
+	max-height: 700rpx;
+	overflow: auto;
+}
+.filter-tags{
+	padding: 20rpx;
+}
+.filter-tags text{
+	padding: 20rpx 26rpx;
+	border: 1rpx solid #ddd;
+	display: inline-block;
+	line-height: 1;
+	color: #666;
+	font-size: 28rpx;
+	border-radius: 4rpx;
+	margin: 10rpx;
+	white-space: nowrap;
+}
+.filter-tags text.active{
+	background: #f7982a;
+	color: #fff;
+	border-color: #f7982a;
+}
+.filter-btns{
+	display: flex;
+	padding: 20rpx;
+	border-top: 1rpx solid #ddd;
+	margin-top: -1rpx;
+}
+.filter-btns button{
+	margin: 0 10rpx;
+	line-height: 80rpx;
+}
