--- a/ruoyi-admin/src/main/resources/templates/system/user/profile/profile.html
+++ b/ruoyi-admin/src/main/resources/templates/system/user/profile/profile.html
@@ -5,12 +5,13 @@
     <style type="text/css">.user-info-head{position:relative;display:inline-block;}.user-info-head:hover:after{content:'\f030';position:absolute;left:0;right:0;top:0;bottom:0;color:#eee;background:rgba(0,0,0,0.5);font-family:FontAwesome;font-size:24px;font-style:normal;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;cursor:pointer;line-height:110px;border-radius:50%;}</style>
 </head>
 <input id="userId" name="userId" type="hidden" th:value="${user.userId}" />
+
 <section class="section-content">
     <div class="container">
         <div class="row">
             <div class="text-center">
                 <p class="user-info-head" onclick="avatar()"><img class="img-circle img-lg" th:src="(${#strings.isEmpty(user.avatar)}) ? @{/img/profile.jpg} : @{${user.avatar}}" th:onerror="'this.src=\'' + @{'/img/profile.jpg'} + '\''"></p>
-                <p>点击图片修改头像</a></p>
+                <p id="xg">点击图片修改头像</a></p>
             </div>
         </div>
         <div class="row">
@@ -23,7 +24,7 @@
         <div class="row">
             <div class="col-sm-2"></div>
             <div class="col-sm-8">
-                <table class="table table-hover" style="table-layout: fixed;word-wrap:break-word;">
+                <table class="table table-hover" id="infotable" style="table-layout: fixed;word-wrap:break-word;">
                     <thead style="display: none;">
                         <tr>
                             <th style="width: 30%;">名称</th>
@@ -33,56 +34,70 @@
                     </thead>
                     <tr class="text-center">
                         <td colspan='4'>您的账号</td>
-                        <td colspan='1'><i class="fa fa-id-card"></i></td>
+                        <td colspan='2'><i class="fa fa-id-card"></i></td>
                         <td colspan='4'>[[${user.loginName}]]</td>
                     </tr>
                     <tr class="text-center">
                         <td colspan='4'>您的姓名</td>
-                        <td colspan='1'><i class="fa fa-user"></i></td>
+                        <td colspan='2'><i class="fa fa-user"></i></td>
                         <td colspan='4'>[[${user.userName}]]</td>
                     </tr>
                     <tr class="text-center">
                         <td colspan='4'>手机号码</td>
-                        <td colspan='1'><i class="fa fa-phone"></i></td>
+                        <td colspan='2'><i class="fa fa-phone"></i></td>
                         <td colspan='4'>[[${user.phonenumber}]]</td>
                     </tr>
                     <tr class="text-center">
                         <td colspan='4'>邮箱地址</td>
-                        <td colspan='1'><i class="fa fa-envelope-o"></i></td>
+                        <td colspan='2'><i class="fa fa-envelope-o"></i></td>
                         <!--<td colspan='5'>[[${#strings.abbreviate(user.email, 16)}]]</td>-->
                         <td colspan='4'>[[${user.email}]]</td>
                     </tr>
                     <tr class="text-center">
                         <td colspan='4'>您的性别</td>
-                        <td colspan='1'><i class="fa fa-heart"></i></td>
+                        <td colspan='2'><i class="fa fa-heart"></i></td>
                         <td colspan='4'><div id="sex" name="sex"></div></td>
                         <!--<td colspan='4'>[[${user.sex}]]</td>-->
                     </tr>
                     <tr class="text-center">
                         <td colspan='4'>所在省份</td>
-                        <td colspan='1'><i class="fa fa-picture-o"></i></td>
+                        <td colspan='2'><i class="fa fa-picture-o"></i></td>
                         <td colspan='4'>[[${user.province}]]</td>
                     </tr>
                     <tr class="text-center">
                         <td colspan='4'>账户余额</td>
-                        <td colspan='1'><i class="fa fa-jpy"></i></td>
+                        <td colspan='2'><i class="fa fa-jpy"></i></td>
                         <td colspan='4'>[[${user.money}]]</td>
                     </tr>
-                    <tr>
-                        <td align="center" colspan='3'>
+                    <tr id="cz1">
+                        <td align="center" colspan='4'>
                             <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#updateForm">
                                 修改资料
                             </button>
                         </td>
-                        <td align="center" colspan='3'>
+                        <td align="center" colspan='2'>
                             <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#updatePwdForm">
                                 修改密码
                             </button>
                         </td>
-                        <td align="center" colspan='3'>
+                        <td align="center" colspan='4'>
                             <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#updateMoneyForm">
                                 账户充值
                             </button>
+                        </td>
+                    </tr>
+                    <tr id="cz2">
+                        <td align="center" colspan='4'>
+                            <a class="btn btn-warning" onclick="myExportExcel()">
+                                <i class="fa fa-download"></i> 导出信息
+                            </a>
+                        </td>
+                        <td align="center" colspan='2'>
+                        </td>
+                        <td align="center" colspan='4'>
+                            <a class="btn btn-success" onclick="printHtml();">
+                                <i class="fa fa-plus"></i> 打印信息
+                            </a>
                         </td>
                     </tr>
                 </table>
@@ -91,8 +106,6 @@
         </div>
     </div>
 </section>
-
-
 
 <!--update form-->
 
@@ -108,15 +121,15 @@
             <div class="modal-body">
                 <form id="input-user-info">
                     <input name="id" id="input-user-account" type="hidden" value="">
-                    <label for="input-login-name" class="col-sm-2 control-label">您的账号</label>
+                    <label for="input-login-name" class="control-label">您的账号</label>
                     <input type="text" class="form-control" id="input-login-name" name="loginName" placeholder="请输入您的账号名称" value="">
-                    <label for="input-user-name" class="col-sm-2 control-label">您的姓名</label>
+                    <label for="input-user-name" class="control-label">您的姓名</label>
                     <input type="text" class="form-control" id="input-user-name" name="userName" placeholder="请输入您的姓名" value="">
-                    <label for="input-user-phone" class="col-sm-2 control-label">手机号码</label>
+                    <label for="input-user-phone" class="control-label">手机号码</label>
                     <input type="text" class="form-control" id="input-user-phone" name="phonenumber" placeholder="请输入手机号码" value="">
-                    <label for="input-user-email" class="col-sm-2 control-label">邮箱地址</label>
+                    <label for="input-user-email" class="control-label">邮箱地址</label>
                     <input type="text" class="form-control" id="input-user-email" name="email" placeholder="请输入邮箱地址" value="">
-                    <label for="choose-user-sex" class="col-sm-2 control-label">性别</label>
+                    <label for="choose-user-sex" class="control-label">性别</label>
                     <select class="form-control" id="choose-user-sex" name="sex">
                         <option value="0">男</option>
                         <option value="1">女</option>
@@ -148,14 +161,17 @@
             <div class="modal-body">
                 <form id="input-user-money-form">
                     <input name="id" id="input-money-user-account" type="hidden" value="">
-                    <label for="input-user-money" class="col-sm-2 control-label">充值金额</label>
+                    <label for="input-user-money" class="control-label">充值金额</label>
                     <input type="text" class="form-control" id="input-user-money" name="money" placeholder="请输入充值金额" value="">
+                    <label for="input-user-money" class="control-label">支付密码</label>
+                    <input type="text" class="form-control" id="input-pay-pwd" name="paypwd" placeholder="请输入支付密码" value="">
+
                 </form>
             </div>
 
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">取消修改</button>
-                <button type="button" class="btn btn-primary" onclick="submitUserMoney()" >确认修改</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">取消充值</button>
+                <button type="button" class="btn btn-primary" onclick="submitUserMoney()" >确认充值</button>
             </div>
         </div>
     </div>
@@ -304,6 +320,9 @@
                 min: 0,
                 max: 2147483647
             },
+            paypwd: {
+                required: true
+            }
         },
         messages: {
             "money": {
@@ -312,6 +331,9 @@
                 number: "只能充值正整数金额",
                 max: "为保障您的账户安全，不能充值过大金额"
             },
+            "paypwd": {
+                required: "请输入支付密码！"
+            }
         },
         focusCleanup: true
     });
@@ -492,6 +514,71 @@
         }
     })
 
+    // 导出数据
+    function myExportExcel(formId) {
+        var url=ctx+'system/user/profile/export';
+        $.modal.confirm("确定导出个人信息吗？", function() {
+            var dataParam=[
+                {
+                    "name": "deptId",
+                    "value": ""
+                },
+                    {
+                        "name": "parentId",
+                        "value": ""
+                    },
+                    {
+                        "name": "loginName",
+                        "value": ""
+                    },
+                    {
+                        "name": "phonenumber",
+                        "value": ""
+                    },
+                    {
+                        "name": "status",
+                        "value": ""
+                    },
+                    {
+                        "name": "params[beginTime]",
+                        "value": ""
+                    },
+                    {
+                        "name": "params[endTime]",
+                        "value": ""
+                    },
+                    {
+                        "name": "orderByColumn",
+                        "value": "createTime"
+                    },
+                    {
+                        "name": "isAsc",
+                        "value": "desc"
+                    }
+                ];
+            $.modal.loading("正在导出数据，请稍候...");
+            $.post(url, dataParam, function(result) {
+                if (result.code == web_status.SUCCESS) {
+                    window.location.href = ctx + "common/download?fileName=" + encodeURI(result.msg) + "&delete=" + true;
+                } else if (result.code == web_status.WARNING) {
+                    $.modal.alertWarning(result.msg)
+                } else {
+                    $.modal.alertError(result.msg);
+                }
+                $.modal.closeLoading();
+            });
+        });
+    }
+
+    function printHtml() {
+        $("#cz1").css("display","none");
+        $("#cz2").css("display","none");
+        $("#xg").css("display","none");
+        window.print();
+        $("#cz1").css("display","");
+        $("#cz2").css("display","");
+        $("#xg").css("display","");
+    }
 
 
 </script>
