修改天气管理的查询为模糊查询

--- a/ruoyi-admin/src/main/resources/templates/weather/weather/edit.html
+++ b/ruoyi-admin/src/main/resources/templates/weather/weather/edit.html
@@ -101,12 +101,18 @@
         $("#form-weather-edit").validate({
             focusCleanup: true,
             rules: {
+                city: {
+                    required: true,
+                },
                 humidity: {
                     required: true,
                     range:[0,100]
                 }
             },
             messages: {
+                city: {
+                    required: "请输入城市名",
+                },
                 humidity: {
                     required: "请输入湿度",
                     range: "请输入0~100的整数"
