--- a/ruoyi-admin/src/main/resources/templates/weather/weather/add.html
+++ b/ruoyi-admin/src/main/resources/templates/weather/weather/add.html
@@ -111,12 +111,18 @@
         $("#form-weather-add").validate({
             focusCleanup: true,
             rules: {
+                city: {
+                    required: true,
+                },
                 humidity: {
                     required: true,
                     range:[0,100]
                 }
             },
             messages: {
+                city: {
+                    required: "请输入城市名",
+                },
                 humidity: {
                     required: "请输入湿度",
                     range: "请输入0~100的整数"
