添加了房间查看的页面，订购功能还未完成

--- a/wx/pages/info/room_order/room_order.wxml
+++ b/wx/pages/info/room_order/room_order.wxml
@@ -1,8 +1,9 @@
 <view class='tab-items'>
     <!-- 待入仓 -->  
+    
     <view class='show'>
       <view class='list' wx:for="{{houseList}}" wx:for-item="item" wx:key='id'>
-        <view class='list_top'>
+        <view class='list_top' bindtap="houseClicked" data-id="{{index}}">
           <view class='numAndTime'>
             <image class='numPic' src='{{item.imageUrl}}'></image>
             <view  class='numInfo'>
@@ -10,7 +11,10 @@
               <view class='time'>{{item.address}}</view>
             </view>
           </view>
-          <view class='state'>销量：{{item.sale}}</view>
+          <view>
+            <view class='state'>销量：{{item.sale}}</view>
+            <view class='state'>评分：{{item.score}}</view>
+          </view>
         </view>
       </view>
     </view>
