--- a/ruoyi-admin/src/main/resources/templates/system/room/add.html
+++ b/ruoyi-admin/src/main/resources/templates/system/room/add.html
@@ -27,13 +27,22 @@
         <div class="form-group">
             <label class="col-sm-3 control-label is-required">房间标准(单/双/三人间):</label>
             <div class="col-sm-8">
-                <input name="standard" class="form-control" type="text" required>
+                <select class="form-control"  name="standard" required>
+                    <option value="">请选择</option>
+                    <option value="单人间">单人间</option>
+                    <option value="双人间">双人间</option>
+                    <option value="三人间">三人间</option>
+                </select>
             </div>
         </div>
         <div class="form-group">
-            <label class="col-sm-3 control-label is-required">空闲（是：1，否：0）：</label>
+            <label class="col-sm-3 control-label is-required">空闲：</label>
             <div class="col-sm-8">
-                <input name="isFree" class="form-control" type="number" required oninput="if(value!=0)value=1">
+                <select class="form-control"  name="isFree" required>
+                    <option value="">请选择</option>
+                    <option value=1>是</option>
+                    <option value=0>否</option>
+                </select>
             </div>
         </div>
     </form>
