--- a/ruoyi-admin/src/main/resources/templates/system/room/edit.html
+++ b/ruoyi-admin/src/main/resources/templates/system/room/edit.html
@@ -28,13 +28,22 @@
         <div class="form-group">
             <label class="col-sm-3 control-label is-required">房间标准：</label>
             <div class="col-sm-8">
-                <input name="standard" th:field="*{standard}" class="form-control" type="text" required>
+                <select class="form-control"  name="standard" th:field="*{standard}" required>
+                    <option value="">请选择</option>
+                    <option value="单人间">单人间</option>
+                    <option value="双人间">双人间</option>
+                    <option value="三人间">三人间</option>
+                </select>
             </div>
         </div>
         <div class="form-group">
-            <label class="col-sm-3 control-label is-required">空闲（是：1，否：0）：</label>
+            <label class="col-sm-3 control-label is-required">空闲：</label>
             <div class="col-sm-8">
-                <input name="isFree" th:field="*{isFree}" class="form-control" type="text" required>
+                <select class="form-control"  th:field="*{isFree}" name="isFree" required>
+                    <option value="">请选择</option>
+                    <option value=1>是</option>
+                    <option value=0>否</option>
+                </select>
             </div>
         </div>
     </form>
