--- a/wx/pages/user/todo/todo.wxml
+++ b/wx/pages/user/todo/todo.wxml
@@ -1,2 +1,35 @@
-<!--pages/user/todo/todo.wxml-->
-<text>pages/user/todo/todo.wxml</text>
+<view class='yue'>
+  <button class='sbutton' style="background-color: #1088d8; color: white;" bindtap="addClicked">
+    添加代办
+  </button>
+  <button class='sbutton' bindtap="statisticsClicked">
+    代办统计
+  </button>
+</view>
+<view class='yue'>
+  <button class='sbutton' bindtap="orderDDLClicked">
+    按截止时间排序
+  </button>
+  <button class='sbutton' style="background-color: #1088d8; color: white;" bindtap="orderStatusClicked">
+    按状态排序
+  </button>
+</view>
+<view class='tab-items'>
+  <view class='show'>
+    <view class='list' wx:for="{{todoList}}" wx:for-item="item" wx:key='id'>
+      <view class='list_top' data-id="{{index}}">
+        <view class='numAndTime'>
+          <view  class='numInfo' bindtap="modifyTodoClicked" data-idx="{{index}}">
+            <view class='num'>{{item.ddlTime}} 截止</view>
+            <view class='time'>{{item.content}}</view>
+          </view>
+        </view>
+        <view>
+          <view class='doing' wx:if="{{item.status == 0}}">待完成</view>
+          <view class="done" wx:else>已完成</view>
+          <view class='delete' bindtap="deleteTodoClicked" data-idx="{{index}}">删除</view>
+        </view>
+      </view>
+    </view>
+  </view>
+</view>
