--- a/wx/pages/user/todo/add/add_todo.wxss
+++ b/wx/pages/user/todo/add/add_todo.wxss
@@ -1,42 +1,51 @@
-/* pages/finishDetails/finishDetails.wxss */
+/* pages/loadEdit/loadEdit.wxss */
 page{
   background: #ededed;
  }
- .numPic{
-   width:100%;
-   height: 300rpx;
-   margin: 0rpx;
- }
- .main{
-   width: 100%;
-   position: relative;
-   top: -50rpx;
- }
- .finishInfo{
+.picture{
+  width: 100%;
+  height: 300rpx;
+}
+.main{
+  width: 100%;
+}
+.todo-contents{
+  width: 100%;
+  height: 150rpx;
+  line-height: 0%;
+  margin-left: 30rpx;
+  margin-top: 30rpx;
+}
+ .editInfo{
    width: 94%;
-   height: 200rpx;
+   height: 130rpx;
    margin: 16rpx auto 0;
    background: #ffffff;
    border-radius: 8rpx;
    display: flex;
    justify-content: space-between
  }
- .finishInfo_left{
+ .editInfo_left{
    width: 86%;
    height: 130rpx;
+   display: flex;
  }
  .bianhao{
    width: 80%;
    height: 32rpx;
-   margin-top: 60rpx;
-   display: flex;
+   margin-top: 28rpx;
+   margin-left: 30rpx;
+ }
+ .numPic{
+   width: 130rpx;
+   height: 90rpx;
+   margin:22rpx 14rpx 0 28rpx;
  }
  .num{
-   font-size: 60rpx;
+   font-size: 32rpx;
    font-weight: bold;
    color: #3d4663;
    line-height: 32rpx;
-   margin-left: 20rpx;
  }
  .time{
    width: 80%;
@@ -44,23 +53,19 @@ page{
    font-size: 24rpx;
    line-height: 24rpx;
    color: #999999;
-   margin-top: 40rpx;
-   margin-left: 30rpx;
+   margin:18rpx 0 0 0
  }
- .finishInfo_right{
-   width: 250rpx;
-   height: 150rpx;
+ .editInfo_right{
+   width: 142rpx;
+   height: 54rpx;
    background: #3d4663;
-   font-size: 40rpx;
+   font-size: 26rpx;
    line-height: 54rpx;
    text-align: center;
    color: #ffffff;
    border-top-left-radius: 27rpx;
    border-bottom-left-radius: 27rpx;
-   margin-top: 25rpx;
-   display: flex;
-   flex-direction: column;
-   justify-content: center;
+   margin-top: 32rpx;
  }
  .remarks{
    width: 94%;
@@ -100,100 +105,48 @@ page{
  .lists{
    border-bottom: 2rpx solid #e6e6e6
  }
- .list_name,.exp_list_name{
+ .list_name{
    font-size: 30rpx;
    font-weight: bold;
    color: #333333;
  }
- .exp_list_name{
-    line-height: 90rpx;
- }
  .list_items{
    font-size: 24rpx;
-   color: #999999;
    display: flex;
    justify-content: space-between;
+   color: #999999;
  }
  .list_item{
    font-size: 24rpx;
    color: #999999;
  }
- .lists_exp{
-   width: 92%;
-   margin: auto;
-   height: 148rpx;
-   line-height: 148rpx;
-   display: flex;
-   justify-content: space-between;
-   border-bottom: 2rpx solid #e6e6e6
+ .inputInfo{
+   width: 306rpx;
+   height: 100%;
+   text-align: right;
  }
- .exp_list{
-   width: 92%;
-   margin: auto;
-   height: 192rpx;
- }
- .exp_list_item{
-   display: block;
-   font-size: 24rpx;
-   line-height: 36rpx; 
-   color: #9f9f9f
- }
- .list_pic{
-   width: 130rpx;
-   height: 90rpx;
-   margin-top: 30rpx;
+ .inputStyle{
+   color: #999999;
  }
  .jiantou{
    width: 18rpx;
    height: 30rpx;
    margin: 28rpx 0 0 16rpx;
  }
- .shoujian{
-   width: 94%;
-   height: 284rpx;
-   margin:16rpx auto 0;
-   background: #ffffff;
-   border-radius: 8rpx;
- }
- .express{
-   width: 94%;
-   height: 100rpx;
-   margin:16rpx auto 0;
-   background: #ffffff;
-   border-radius: 8rpx;
- }
  .else{
    width: 94%;
-   height: 598rpx;
-   margin:16rpx auto 200rpx;
+   height: 400rpx;
+   margin: 16rpx auto 0;
    background: #ffffff;
    border-radius: 8rpx;
  }
- .jijian{
-   width: 94%;
-   height: 458rpx;
-   margin:16rpx auto 0;
-   background: #ffffff;
-   border-radius: 8rpx;
+ .editPic{
+   width: 29rpx;
+   height: 32rpx;
+   margin: 28rpx 0 0 16rpx;
  }
- .asBtn{
-   width: 160rpx;
-   height: 50rpx;
-   font-size: 26rpx;
-   line-height: 50rpx;
-   border: 2rpx solid #e6e6e6;
-   text-align: center;
-   border-radius: 26rpx;
-   margin: auto;
-   color: #999999;
- }
- .xiangxia{
-   width: 24rpx;
-   height: 14rpx;
-   margin-bottom:4rpx; 
- }
- .del{
-   position: fixed;
+ .confirm{
+   position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
@@ -202,17 +155,23 @@ page{
    margin-top: 176rpx;
    background: #ffffff;
  }
- .delBtn{
-   width: 150rpx;
-   height: 52rpx;
+ .confirmBtn{
+   width: 160rpx;
+   height: 60rpx;
    font-size: 26rpx;
-   line-height: 52rpx;
-   border:2rpx solid #e6e6e6;
+   line-height: 30rpx;
+   display: block;
+   /* border:2rpx solid #e6e6e6; */
    border-radius: 26rpx;
    float: right;
    margin: 22rpx 24rpx 0 0;
    text-align: center;
-   color: #999999;
+   color: #ffffff;
+   background-color: #f3b328;
+ }
+ .confirmBtn::after{
+   border:none;
+   border:2rpx solid #e6e6e6;
  }
  .rexian{
    width: 100%;
@@ -253,22 +212,3 @@ page{
    line-height: 54rpx;
    color:#ededed;
  }
- .zhankai{
-   width: 154rpx;
-   height: 50rpx;
-   border: 2rpx solid #e6e6e6;
-   border-radius: 25rpx;
-   text-align: center;
-   font-size: 26rpx;
-   line-height: 50rpx;
-   color: #999999;
-   margin:10rpx auto;
- }
- .xiangshang{
-   width: 24rpx;
-   height: 14rpx;
-   margin-bottom:4rpx; 
-   transform: rotate(180deg)
- }
- .none{display: none}
- .show{display: block}
