--- a/wx/pages/user/comment/comment.wxss
+++ b/wx/pages/user/comment/comment.wxss
@@ -1,1 +1,139 @@
-/* pages/user/comment/comment.wxss */
+/* pages/goods/goods.wxss */
+page{
+  background: #ededed;
+  height: 100%;
+}
+.yue{
+  height: 250rpx;
+  margin-left: 30rpx;
+  margin-right: 30rpx;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+.sbutton{
+  height: 80rpx;
+  font-size: 30rpx;
+  line-height: 30%;
+  margin-top: 5rpx;
+  background: #f3b328;
+}
+.swiper-tab{ 
+  position: fixed; 
+  top:0;
+  left: 0;
+  width: 100%;  
+  /* margin-top: 2rpx; */
+  text-align: center;  
+  line-height: 88rpx;
+  height: 88rpx;
+  background: #ffffff;
+  display: flex;
+  justify-content: space-between;
+  z-index: 999;
+}  
+.kong{
+  width: 100%;
+  height: 90rpx;
+}
+.kong2{
+  width: 100%;
+  height: 176rpx;
+}
+.tab-item{
+  width: 25%;
+  height: 100%;
+  font-size: 24rpx;
+  font-weight: bold;
+  color: #999999; 
+}
+.active{
+  color: #3d4663;  
+  border-bottom: 2rpx solid #3d4663;
+}
+.show{
+  display: block
+}
+.hidden{
+  display: none;
+}
+.list{  
+  width: 94%;
+  height: 150rpx;
+  margin: 16rpx auto;
+  background: #ffffff;
+  border-radius: 8rpx;
+}  
+.list_top{
+  width: 100%;
+  height: 130rpx;
+  display: flex;
+  justify-content: space-between;
+  overflow: hidden
+}
+.numAndTime{
+  width: 514rpx;
+  height: 98rpx;
+  margin: 30rpx 0 0 30rpx;
+  display: flex;
+}
+.numInfo{
+  width: 380rpx;
+  height: 98rpx;
+  font-size: 32rpx;
+  color: #3d4663;
+}
+.numPic{
+  width: 180rpx;
+  height: 140rpx;
+  display: block;
+  margin:0 14rpx 0 0;
+  float: left
+}
+.num{
+  font-weight: bold;
+}
+.time{
+  line-height: 24rpx;
+  font-size: 24rpx;
+  margin-top: 16rpx;
+  color:#999999;
+}
+.delete{
+  width: 180rpx;
+  height: 50rpx;
+  background:#ef4029;
+  font-size: 34rpx;
+  line-height: 54rpx;
+  text-align: center;
+  color:#ffffff;
+  border-top-left-radius: 27rpx;
+  border-bottom-left-radius: 27rpx;
+  margin-top: 18rpx;
+}
+.doing{
+  width: 180rpx;
+  height: 50rpx;
+  background:#6832e3;
+  font-size: 34rpx;
+  font-weight: bold;
+  line-height: 54rpx;
+  text-align: center;
+  color:#ffffff;
+  border-top-left-radius: 27rpx;
+  border-bottom-left-radius: 27rpx;
+  margin-top: 18rpx;
+}
+.done{
+  width: 180rpx;
+  height: 50rpx;
+  background:rgba(60, 255, 0, 0.925);
+  font-size: 34rpx;
+  font-weight: bold;
+  line-height: 54rpx;
+  text-align: center;
+  color:#ffffff;
+  border-top-left-radius: 27rpx;
+  border-bottom-left-radius: 27rpx;
+  margin-top: 18rpx;
+}
