--- a/ruoyi-admin/src/main/resources/templates/landlordspecialtyorder/specialtyorder/specialtyorder.html
+++ b/ruoyi-admin/src/main/resources/templates/landlordspecialtyorder/specialtyorder/specialtyorder.html
@@ -103,7 +103,7 @@
                 <a class="btn btn-warning" onclick="$.table.exportExcel()" shiro:hasPermission="landlordspecialtyorder:specialtyorder:export">
                     <i class="fa fa-download"></i> 导出
                 </a>
-                <a class="btn btn-success" onclick="printHtml();" shiro:hasPermission="xxxx:xxxx:print">
+                <a class="btn btn-success" onclick="printHtml();" shiro:hasPermission="landlordspecialtyorder:specialtyorder:print">
                     <i class="glyphicon glyphicon-print icon-share"></i> 打印
                 </a>
                 <a class="btn btn-warning" onclick="$.modal.openTab('特产订单管理统计', '/landlordspecialtyorder/specialtyorder/eCharts');" shiro:hasPermission="landlordspecialtyorder:specialtyorder:eCharts">
@@ -123,6 +123,7 @@
         var editFlag = [[${@permission.hasPermi('landlordspecialtyorder:specialtyorder:edit')}]];
         var removeFlag = [[${@permission.hasPermi('landlordspecialtyorder:specialtyorder:remove')}]];
         var querycommentFlag = [[${@permission.hasPermi('landlordspecialtyorder:specialtyorder:querycomment')}]];
+        var printFlag = [[${@permission.hasPermi('landlordspecialtyorder:specialtyorder:print')}]];
         var isReceivedDatas = [[${@dict.getType('sys_user_is_received')}]];
         var isPaidDatas = [[${@dict.getType('sys_user_is_paid')}]];
         var isDoneDatas = [[${@dict.getType('sys_user_is_done')}]];
